tests/errors/builtins_params.wren
// Test program for built-in functions
import "ifj25" for Ifj

class Program {
    static main() { 
        var wrong
        wrong = 0.4

        var ifj_f1
        ifj_f1 = Ifj.floor(4.7)
        
        var ifj_len
        //ifj_len = Ifj.length("4")
        
        var ifj_sub
        //ifj_sub = Ifj.substring("Hello World", 0.4, 5)
        
        var ifj_cmp
        //ifj_cmp = Ifj.strcmp(4, "abc")

        var ifj_o
        //ifj_o = Ifj.ord("sasa", 0.4)
        
        var ifj_c
        //ifj_c = Ifj.chr(wrong)
    }
}
